--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "nodemailer": "^6.5.0",
     "paypal-rest-sdk": "^1.8.1"
   }
 }
