--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "payment through paypal",
   "main": "app.js",
   "scripts": {
+    "start": "node app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
